--- a/css/jaimezapata.css
+++ b/css/jaimezapata.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f0f8ff; 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
 }
