--- a/css/jaimezapata.css
+++ b/css/jaimezapata.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f0f8ff; 
+    background-color: #f2e3c5; 
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
